# omnifix

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: Build-GCC.yml  Build-LLVM.yml  Build-MSVC.yml
cmake/: version.cmake
lib/: avs2-core.def  avs2-core.lib
src/: avs2.h  bm2dx.h  exceptions.h  memory.cc  memory.h  modules.cc  modules.h  omnifix.cc
